tests/sources/invalid/types/semantic_modulo_mismatch.fire
// Semantic type error: modulo requires same-type integer operands.

fn modulo_mismatch() -> void {
    a: int32 = 5;
    b: int64 = 6;  //~ ERROR FS-SEM-0002 @5
    c: int32 = a % b;  //~ ERROR FS-SEM-0010 @18
}
